overflow issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #f4f4f4;
-    width: 100%;
+    overflow-x: hidden;
 }
 nav{
     background-color: #ffffff;
